--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -32,7 +32,7 @@
     </record>
 
     <record id="hr_attendance_view_filter" model="ir.ui.view">
-        <field name="name">hr_attendance_view_filter</field>
+        <field name="name">hr.attendance.view.filter</field>
         <field name="model">hr.presenze</field>
         <field name="arch" type="xml">
             <search string="Alunnni presenze ricerche">
