--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -31,8 +31,8 @@
         </field>
     </record>
 
-    <record id="hr_attendance_view_filter" model="ir.ui.view">
-        <field name="name">hr.attendance.view.filter</field>
+    <record id="hr_presenze_view_filter" model="ir.ui.view">
+        <field name="name">hr.presenze.view.filter</field>
         <field name="model">hr.presenze</field>
         <field name="arch" type="xml">
             <search string="Alunnni presenze ricerche">
@@ -85,7 +85,7 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{"search_default_today":1}</field>
-        <field name="search_view_id" ref="hr_attendance_view_filter" />
+        <field name="search_view_id" ref="hr_presenze_view_filter" />
         <field name="help" type="html">
             <p>The attendance records of your employees will be displayed here.</p>
             <p>Please make sure you're using the correct filter if you expected to see any.</p>
