--- a/views/hr_employee_view.xml
+++ b/views/hr_employee_view.xml
@@ -26,8 +26,9 @@
                 </group>
             </xpath>
              <xpath expr="//field[@name='category_ids']" position="replace">
-                    <field name="category_ids" widget="many2many_tags" options="{'color_field': 'color'}" placeholder="e.g. Part Time"/>
-            </xpath>
+                    <field name="category_ids" widget="many2many_tags" options="{'color_field': 'color'}" placeholder="e.g. studente/>
+                    <field name="child_ids" widget="many2one"/>
+            </xpath>                   
         </field>
     </record>
 
