--- a/views/hr_employee_view.xml
+++ b/views/hr_employee_view.xml
@@ -25,7 +25,7 @@
                     <field name="manual_attendance" attrs="{'invisible': [('user_id', '=', False)]}"/>
                 </group>
             </xpath> 
-            <xpath expr="//notebook/page/group/group[2]" position="before">
+            <xpath expr="//notebook/page/group/group[2]" position="inside">
                  <field name="classe_id"/>
             </xpath>             
         </field>
