--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -147,13 +147,13 @@
     
     <!--menuitem id="scuola_menu_hr_attendance_my_attendances" name="Check In / Check Out" parent="scuola_modulo"  action="hr_presenza_action_my_presenze"/-->
 
-    <menuitem id="scuola_menu_hr_attendance_manage_attendances" name="Gestioni ulteriori" parent="scuola_modulo" sequence="20"/>
+    <menuitem id="scuola_menu_hr_attendance_manage_attendances" name="Gestioni ulteriori" parent="scuola_modulo"/>
 
-    <menuitem id="scuola_menu_hr_attendance_view_presenze" name="Attendances" parent="scuola_modulo"  action="hr_presenze_action"/>
+    <menuitem id="scuola_menu_hr_attendance_view_presenze" name="Presenze_2" parent="scuola_menu_hr_attendance_manage_attendances" sequence="15" action="hr_presenze_action"/>
 
-    <menuitem id="scuola_menu_hr_attendance_view_employees_kanban" name="Soggetti scolastici" parent="scuola_modulo" action="hr.open_view_employee_list_my"/>
+    <menuitem id="scuola_menu_hr_attendance_view_employees_kanban" name="Soggetti scolastici" parent="scuola_menu_hr_attendance_manage_attendances" sequence="20" action="hr.open_view_employee_list_my"/>
 
-    <menuitem id="scuola_menu_hr_attendance_kiosk_mode" name="Kiosk Mode" parent="scuola_menu_hr_attendance_manage_attendances" sequence="25" action="hr_presenze_action_kiosk_mode"/>
+    <menuitem id="scuola_menu_hr_attendance_kiosk_mode" name="Kiosk Mode_2" parent="scuola_menu_hr_attendance_manage_attendances" sequence="25" action="hr_presenze_action_kiosk_mode"/>
 
-    <menuitem id="scuola_menu_hr_attendance_report" name="Reporting" parent="scuola_menu_hr_attendance_manage_attendances" sequence="30" action="hr_presenze_action_graph"/>
+    <menuitem id="scuola_menu_hr_attendance_report" name="Reporting_2" parent="scuola_menu_hr_attendance_manage_attendances" sequence="30" action="hr_presenze_action_graph"/>
 </odoo>
