--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -30,28 +30,6 @@
             </form>
         </field>
     </record>
-    
-    <record id="hr_presenze_view_filtro" model="ir.ui.view">
-        <field name="name">hr.presenze.view.filtro</field>
-        <field name="model">hr.presenze</field>
-        <field name="arch" type="xml">
-            <search string="alunnni_presenze_ricerche">
-                <field name="employee_id"/>
-                <field name="department_id"/>
-                <filter name="today" string="Today" domain="[('check_in', '&gt;=', datetime.datetime.now().replace(hour=0, minute=0, second=0)),('check_in', '&lt;=', datetime.datetime.now().replace(hour=23, minute=59, second=59))]" />
-                <filter string="Current Month" domain="[('check_in', '&gt;=', datetime.datetime.now().strftime('%Y-%m-01'))]" />
-                <separator/>
-                <filter string="No Check Out" domain="[('check_out', '=', False)]" />
-                <separator/>
-                <filter string="My Attendances" domain="[('employee_id.user_id.id', '=', uid)]" />
-                <group expand="0" string="Group By">
-                    <filter name="employee" string="Employee" context="{'group_by':'employee_id'}"/>
-                    <separator/>
-                    <filter name="groupby_name" string="Month" context="{'group_by':'check_in'}"/>
-                </group>
-            </search>
-        </field>
-    </record>
 
     <record id="hr_presenza_view_pivot" model="ir.ui.view">
         <field name="name">hr.presenze.pivot</field>
@@ -74,6 +52,28 @@
                 <field name="check_in"/>
                 <field name="worked_hours" type="measure"/>
             </graph>
+        </field>
+    </record>
+    
+      <record model="ir.ui.view" id="presenze_search_view">
+        <field name="name">presenze.filter/field>
+        <field name="model">hr.presenze</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="employee_id"/>
+                <field name="department_id"/>
+                <filter name="today" string="Today" domain="[('check_in', '&gt;=', datetime.datetime.now().replace(hour=0, minute=0, second=0)),('check_in', '&lt;=', datetime.datetime.now().replace(hour=23, minute=59, second=59))]" />
+                <filter string="Current Month" domain="[('check_in', '&gt;=', datetime.datetime.now().strftime('%Y-%m-01'))]" />
+                <separator/>
+                <filter string="No Check Out" domain="[('check_out', '=', False)]" />
+                <separator/>
+                <filter string="My Attendances" domain="[('employee_id.user_id.id', '=', uid)]" />
+                <group expand="0" string="Group By">
+                    <filter name="employee" string="Employee" context="{'group_by':'employee_id'}"/>
+                    <separator/>
+                    <filter name="groupby_name" string="Month" context="{'group_by':'check_in'}"/>
+                </group>
+            </search>
         </field>
     </record>
 
@@ -139,7 +139,8 @@
         <field name="name">Message</field>
         <field name="tag">hr_presenze_greeting_message</field>
     </record>
-
+    
+    
     <!-- Menus -->
  
 
