--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -55,7 +55,7 @@
         </field>
     </record>
     
-      <record model="ir.ui.view" id="presenze_search_view">
+     <record model="ir.ui.view" id="presenze_search_view">
         <field name="name">presenze.filter/field>
         <field name="model">hr.presenze</field>
         <field name="arch" type="xml">
@@ -85,7 +85,7 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{"search_default_today":1}</field>
-        <field name="search_view_id" ref="hr_presenze_view_filtro"/>
+        <field name="search_view_id" ref="presenze_search_view"/>
         <field name="help" type="html">
             <p>The attendance records of your employees will be displayed here.</p>
             <p>Please make sure you're using the correct filter if you expected to see any.</p>
