--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -31,6 +31,27 @@
         </field>
     </record>
 
+     <record id="hr_attendance_view_filter" model="ir.ui.view">
+        <field name="name">hr_attendance_view_filter</field>
+        <field name="model">hr.attendance</field>
+        <field name="arch" type="xml">
+            <search string="Hr Attendance Search">
+                <field name="employee_id"/>
+                <field name="department_id"/>
+                <filter string="My Attendances" name="myattendances" domain="[('employee_id.user_id.id', '=', uid)]" />
+                <separator/>
+                <filter name="check_in_filter" string="Check In Date" date="check_in"/>
+                <filter string="No Check Out" name="nocheckout" domain="[('check_out', '=', False)]" />
+                <group expand="0" string="Group By">
+                    <filter name="employee" string="Employee" context="{'group_by':'employee_id'}"/>
+                    <separator/>
+                    <filter name="groupby_name" string="Check In Date" context="{'group_by': 'check_in'}"/>
+                    <filter name="groupby_check_out" string="Check Out Date" context="{'group_by': 'check_out'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+    
     <record id="hr_presenza_view_pivot" model="ir.ui.view">
         <field name="name">hr.presenze.pivot</field>
         <field name="model">hr.presenze</field>
@@ -55,27 +76,7 @@
         </field>
     </record>
     
-     <record model="ir.ui.view" id="presenze_search_view">
-        <field name="name">presenze.filter</field>
-        <field name="model">hr.presenze</field>
-        <field name="arch" type="xml">
-            <search>
-                <field name="employee_id"/>
-                <field name="department_id"/>
-                <filter name="today" string="Today" domain="[('check_in', '&gt;=', datetime.datetime.now().replace(hour=0, minute=0, second=0)),('check_in', '&lt;=', datetime.datetime.now().replace(hour=23, minute=59, second=59))]" />
-                <filter string="Current Month" domain="[('check_in', '&gt;=', datetime.datetime.now().strftime('%Y-%m-01'))]" />
-                <separator/>
-                <filter string="No Check Out" domain="[('check_out', '=', False)]" />
-                <separator/>
-                <filter string="My Attendances" domain="[('employee_id.user_id.id', '=', uid)]" />
-                <group expand="0" string="Group By">
-                    <filter name="employee" string="Employee" context="{'group_by':'employee_id'}"/>
-                    <separator/>
-                    <filter name="groupby_name" string="Month" context="{'group_by':'check_in'}"/>
-                </group>
-            </search>
-        </field>
-    </record>
+        
 
     <!-- actions -->
 
@@ -85,7 +86,7 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{"search_default_today":1}</field>
-        <field name="search_view_id" ref="presenze_search_view"/>
+        <field name="search_view_id" ref="hr_attendance_view_filter"/>
         <field name="help" type="html">
             <p>The attendance records of your employees will be displayed here.</p>
             <p>Please make sure you're using the correct filter if you expected to see any.</p>
