--- a/views/hr_presenze_view.xml
+++ b/views/hr_presenze_view.xml
@@ -86,7 +86,7 @@
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{"search_default_today":1}</field>
-        <field name="search_view_id" ref="hr_attendance_view_filter"/>
+        <field name="search_view_id" ref="hr_presenze_view_filter"/>
         <field name="help" type="html">
             <p>The attendance records of your employees will be displayed here.</p>
             <p>Please make sure you're using the correct filter if you expected to see any.</p>
