--- a/views/registro_onboarding_templates.xml
+++ b/views/registro_onboarding_templates.xml
@@ -134,7 +134,7 @@
             <t t-set="state" t-value="state.get('account_onboarding_sale_tax_state')" />
         </t>
     </template>
-    <record id="account_invoice_onboarding_sale_tax_form" model="ir.ui.view">
+    <!--record id="account_invoice_onboarding_sale_tax_form" model="ir.ui.view">
         <field name="name">account.invoice.layout.onboarding.form</field>
         <field name="model">res.company</field>
         <field name="mode">primary</field>
@@ -150,7 +150,7 @@
                 </footer>
             </form>
         </field>
-    </record>
+    </record-->
     <record id="action_open_account_onboarding_sale_tax" model="ir.actions.act_window">
         <field name="name">Sales tax</field>
         <field name="type">ir.actions.act_window</field>
